# pytoc

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
.github/: FUNDING.yml
.github/workflows/: python-package.yml  python-publish.yml  tests.yml
src/pytoc/: context.py  directives.py  enums.py  file_entry.py  load_conditions.py  meta.py  parser.py  shared.py  toc.py  utils.py
tests/: test_toc.py  testfile.toc
