[options]
packages = 
    pytoc
python_requires = >= 3.8
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    flake8>=7.0.0
    pytest>=8.2.1
    pytest-cov>=5.0.0

[options.package_data]
pytoc = py.typed

[flake8]
max-complexity = 10
max-line-lenth = 160
exclude =
    # hide all temporary files from flake8
    __init__.py